--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -122,7 +122,7 @@ div.contact{
 	float:right;
 }
 
-abbr[title]{
+abbr{
   border-bottom: none !important;
   cursor: inherit !important;
   text-decoration: none !important;
