--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -11,8 +11,9 @@ body {
   padding-top: 56px;
   font-size:1.2rem;
   background-color:rgba(210, 210, 210, 0.6);
+  		border-left:1rem solid grey;
+			border-right:1rem solid grey;
 }
-
 
 
 .navbar-brand{
@@ -97,7 +98,7 @@ ul#Ulist > li{
 		padding: 2rem;
 }*/
 
-/*img.img-fluid{
+img.img-fluid{
 	display:inline-block;
 	padding-left:40px;
 	width:450px;
@@ -109,24 +110,40 @@ ul#Ulist > li{
 img.img-fluid:hover{
 	transform:scale(1.05);
 }
-*/
+
 div.contact{
 
 }
 
-.fb-page{
-	display:flex;
-	align-self:right ;
-	width:auto;
-	height:auto;
-	float:right;
+
+.fb-page > span{
+width:unset !important
 }
 
-abbr{
-  border-bottom: none !important;
-  cursor: inherit !important;
-  text-decoration: none !important;
+.fb-page{
+	position:absolute;
+	right:0;
 }
+
+.contact{
+	max-width:100%;
+}
+
+header, footer{
+    position: absolute;
+    left: 0;
+}
+
+footer{
+	width:100%;
+}
+
+/* Main body div */
+.row{
+    margin: 250px 0 0px;
+}
+
+
 
 
 
