--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -116,7 +116,7 @@ div.contact{
 }
 
 
-.fb-page > span{
+/*.fb-page > span{
 width:unset !important
 }
 
@@ -145,7 +145,7 @@ footer{
     margin: 250px 0 0px;
 }
 
-
+*/
 
 
 
